# drive

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: beatconnect-build.yml
Resources/: .gitkeep
Source/: ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  index.css
web-ui/src/components/: ActivationScreen.tsx  AudioReactiveBackground.tsx  FerrofluidVisualizer.tsx  HorizontalSlider.tsx  Knob.tsx  ModeSelector.tsx  PresetSelector.tsx  SmallKnob.tsx  ToggleSwitch.tsx  VerticalArcSlider.tsx
web-ui/src/context/: AudioContext.tsx
web-ui/src/hooks/: useJuceParam.ts  useVisualizerData.ts
web-ui/src/lib/: juce-bridge.ts
